--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,16 @@ body {
   font-family: "Work Sans", sans-serif;
 }
 
-.btn-primary
+.btn-primary {
+  border-radius: 8px;
+  color: #fff;
+  background: #ff900e;
+  padding: 20px 25px;
+  border: 0;
+  font-size: 1.25rem;
+  font-weight: 600;
+  cursor: pointer;
+}
 
 /* header styles */
 header {
@@ -52,4 +61,29 @@ nav li a {
 }
 .banner-description {
   color: #727272;
+}
+
+.banner img {
+  margin-top: 20px;
+  width: 100%;
+}
+
+/* responsive media queries */
+/* mobile devices */
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav {
+    flex-direction: column;
+  }
+}
+/* medium devices */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  nav {
+    flex-direction: column;
+  }
+  header {
+    padding: 20px;
+  }
 }
