--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ body {
   cursor: pointer;
 }
 
+.text-light-gray {
+  color: #727272;
+}
+
 /* header styles */
 header {
   background: rgba(255, 144, 14, 0.1);
@@ -59,39 +63,16 @@ nav li a {
   font-weight: 700;
   color: #131313;
 }
-.banner-description {
-  color: #727272;
-}
 
 .banner img {
   margin-top: 20px;
   width: 100%;
 }
 
-/* responsive media queries */
-/* mobile devices */
-@media screen and (max-width: 576px) {
-  header {
-    padding: 20px;
-  }
-  nav {
-    flex-direction: column;
-  }
-}
-/* medium devices */
-@media screen and (min-width: 576px) and (max-width: 960px) {
-  nav {
-    flex-direction: column;
-  }
-  header {
-    padding: 20px;
-  }
-}
-
 /* main styles */
 main {
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 70px auto;
 }
 .teams-container {
   display: flex;
@@ -111,10 +92,38 @@ main {
   font-size: 2.8rem;
 }
 .teams-title .quick-list {
-  color: #727272;
   font-weight: 500;
 }
-.teams-title .text-features{
-  color: #FF900E;
+.teams-title .text-features {
+  color: #ff900e;
   font-weight: 700;
+}
+
+/* responsive media queries */
+/* mobile devices */
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav,
+  .teams-container {
+    flex-direction: column;
+  }
+  .teams-img-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .teams-content {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+/* medium devices */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  nav,
+  .teams-container {
+    flex-direction: column;
+  }
+  header {
+    padding: 20px;
+  }
 }
