--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,12 @@ body {
   color: #727272;
 }
 
+.section-title {
+  font-size: 2.8rem;
+  font-weight: 700;
+  color: #131313;
+}
+
 /* header styles */
 header {
   background: rgba(255, 144, 14, 0.1);
@@ -42,12 +48,6 @@ nav li {
 nav li a {
   text-decoration: none;
   color: #424242;
-}
-
-.nav-title {
-  font-size: 2.8rem;
-  font-weight: 700;
-  color: #131313;
 }
 
 /* banner styles */
@@ -97,6 +97,32 @@ main {
 .teams-title .text-features {
   color: #ff900e;
   font-weight: 700;
+}
+
+/* facts section */
+.facts-card-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.facts-card-container .card {
+  border-radius: 8px;
+  border: 1px solid #ff900e;
+  text-align: center;
+  padding: 30px;
+}
+
+.facts-card-container .card-title {
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 5px;
+}
+
+.facts-card-container .card-stats {
+  font-size: 2.8rem;
+  color: #424242;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /* responsive media queries */
