--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,24 @@ main {
   margin-bottom: 10px;
 }
 
+/* sponsors styles */
+.sponsors{
+  text-align: center;
+}
+
+.sponsors-img-container{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 50px;
+  gap: 40px;
+  align-items: center;
+
+}
+
+.sponsors-img-container img{
+  width: 165px;
+}
+
 /* responsive media queries */
 /* mobile devices */
 @media screen and (max-width: 576px) {
@@ -132,21 +150,24 @@ main {
     padding: 20px;
   }
   nav,
-  .teams-container {
+  .teams-container, .facts-card-container, .sponsors-img-container {
     flex-direction: column;
   }
   .teams-img-container {
     grid-template-columns: repeat(1, 1fr);
   }
-  .teams-content {
+  .teams-content, .facts-card-container {
     padding-left: 20px;
     padding-right: 20px;
+  }
+  .facts-card-container{
+    gap: 20px; 
   }
 }
 /* medium devices */
 @media screen and (min-width: 576px) and (max-width: 960px) {
   nav,
-  .teams-container {
+  .teams-container, .sponsors-img-container {
     flex-direction: column;
   }
   header {
