--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,23 @@ main {
   font-weight: 700;
 }
 
+/* features section styles */
+.features {
+  display: flex;
+  margin-top: 130px;
+  gap: 100px;
+}
+.feature-content .card {
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+  padding: 30px;
+  margin-bottom: 20px;
+}
+.features .section-title {
+  border-left: 5px solid #ff900e;
+  padding-left: 20px;
+}
 /* facts section */
 .facts-card-container {
   display: flex;
@@ -125,21 +142,34 @@ main {
   margin-bottom: 10px;
 }
 
+.ten-years-badge {
+  border-radius: 8px;
+  background: #ff900e;
+  color: #fff;
+  width: 342px;
+  padding: 40px; 
+}
+
+.ten-years-badge h2{
+  font-size: 4rem;
+  
+}
+
+
 /* sponsors styles */
-.sponsors{
+.sponsors {
   text-align: center;
 }
 
-.sponsors-img-container{
+.sponsors-img-container {
   display: flex;
   justify-content: space-evenly;
   margin-top: 50px;
   gap: 40px;
   align-items: center;
-
 }
 
-.sponsors-img-container img{
+.sponsors-img-container img {
   width: 165px;
 }
 
@@ -150,24 +180,28 @@ main {
     padding: 20px;
   }
   nav,
-  .teams-container, .facts-card-container, .sponsors-img-container {
+  .teams-container,
+  .facts-card-container,
+  .sponsors-img-container {
     flex-direction: column;
   }
   .teams-img-container {
     grid-template-columns: repeat(1, 1fr);
   }
-  .teams-content, .facts-card-container {
+  .teams-content,
+  .facts-card-container {
     padding-left: 20px;
     padding-right: 20px;
   }
-  .facts-card-container{
-    gap: 20px; 
+  .facts-card-container {
+    gap: 20px;
   }
 }
 /* medium devices */
 @media screen and (min-width: 576px) and (max-width: 960px) {
   nav,
-  .teams-container, .sponsors-img-container {
+  .teams-container,
+  .sponsors-img-container {
     flex-direction: column;
   }
   header {
