--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,32 @@ main {
   border-left: 5px solid #ff900e;
   padding-left: 20px;
 }
+
+.feature-img img {
+  height: 90%;
+  margin-left: 50px;
+}
+
+.ten-years-badge {
+  border-radius: 8px;
+  background: #ff900e;
+  color: #fff;
+  width: 342px;
+  padding: 40px;
+  text-align: center;
+  position: relative;
+  bottom: 100px;
+}
+
+.ten-years-badge h2 {
+  font-size: 4rem;
+  margin: 0;
+}
+
+.ten-years-badge p {
+  font-size: 1.5rem;
+}
+
 /* facts section */
 .facts-card-container {
   display: flex;
@@ -141,20 +167,6 @@ main {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-
-.ten-years-badge {
-  border-radius: 8px;
-  background: #ff900e;
-  color: #fff;
-  width: 342px;
-  padding: 40px; 
-}
-
-.ten-years-badge h2{
-  font-size: 4rem;
-  
-}
-
 
 /* sponsors styles */
 .sponsors {
@@ -182,8 +194,18 @@ main {
   nav,
   .teams-container,
   .facts-card-container,
-  .sponsors-img-container {
+  .sponsors-img-container,
+  .features {
     flex-direction: column;
+  }
+  .feature-img img {
+    width: 90%;
+    margin-left: 0;
+  }
+
+  .ten-years-badge {
+    position: static;
+    max-width: 300px;
   }
   .teams-img-container {
     grid-template-columns: repeat(1, 1fr);
@@ -201,7 +223,8 @@ main {
 @media screen and (min-width: 576px) and (max-width: 960px) {
   nav,
   .teams-container,
-  .sponsors-img-container {
+  .sponsors-img-container,
+  .features {
     flex-direction: column;
   }
   header {
